--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
-flask
+Flask==0.10.1
+Flask-HTTPAuth==2.7.0
+Flask-SQLAlchemy==2.1
+google-common==0.0.1
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+mesos==0.26.0
+mesos.interface==0.26.0
+protobuf==2.6.1
+PyYAML==3.11
+requests==2.9.1
+SQLAlchemy==1.0.11
+Werkzeug==0.11.3
+wheel==0.24.0
