--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+dominate==2.1.16
 Flask==0.10.1
+Flask-Bootstrap==3.3.5.7
 Flask-HTTPAuth==2.7.0
+flask-nav==0.5
 Flask-SQLAlchemy==2.1
 google-common==0.0.1
 itsdangerous==0.24
@@ -11,5 +14,6 @@ protobuf==2.6.1
 PyYAML==3.11
 requests==2.9.1
 SQLAlchemy==1.0.11
+visitor==0.1.2
 Werkzeug==0.11.3
 wheel==0.24.0
