--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
+alabaster==0.7.7
+Babel==2.2.0
+docutils==0.12
 dominate==2.1.16
 Flask==0.10.1
 Flask-Bootstrap==3.3.5.7
 Flask-HTTPAuth==2.7.0
 flask-nav==0.5
 Flask-SQLAlchemy==2.1
+functools32==3.2.3.post2
 google-common==0.0.1
 itsdangerous==0.24
 Jinja2==2.8
+jsonschema==2.5.1
 MarkupSafe==0.23
 mesos==0.26.0
 mesos.interface==0.26.0
 protobuf==2.6.1
+Pygments==2.1
+pytz==2015.7
 PyYAML==3.11
 requests==2.9.1
+six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.3.4
+sphinx-rtd-theme==0.1.9
 SQLAlchemy==1.0.11
 visitor==0.1.2
 Werkzeug==0.11.3
