--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,25 @@
 alabaster==0.7.7
+alembic==0.8.4
 Babel==2.2.0
 decorator==4.0.6
 docutils==0.12
 dominate==2.1.16
 Flask==0.10.1
 Flask-HTTPAuth==2.7.0
+Flask-Migrate==1.7.0
 flask-nav==0.5
+Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 google-common==0.0.1
 itsdangerous==0.24
 Jinja2==2.8
 jsonschema==2.5.1
+Mako==1.0.3
 MarkupSafe==0.23
 pbr==1.8.1
 protobuf==2.6.1
 Pygments==2.1
+python-editor==0.5
 pytz==2015.7
 PyYAML==3.11
 requests==2.9.1
