--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alabaster==0.7.7
 alembic==0.8.4
+aniso8601==1.1.0
 Babel==2.2.0
 docutils==0.12
 Flask==0.10.1
 Flask-Migrate==1.7.0
+Flask-RESTful==0.3.5
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 itsdangerous==0.24
@@ -12,6 +14,7 @@ jsonschema==2.5.1
 Mako==1.0.3
 MarkupSafe==0.23
 Pygments==2.1
+python-dateutil==2.4.2
 python-editor==0.5
 pytz==2015.7
 PyYAML==3.11
