--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aniso8601==1.1.0
 Babel==2.2.0
 docutils==0.12
 Flask==0.10.1
+Flask-HTTPAuth==2.7.2
 Flask-Migrate==1.7.0
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
@@ -13,6 +14,7 @@ Jinja2==2.8
 jsonschema==2.5.1
 Mako==1.0.3
 MarkupSafe==0.23
+passlib==1.6.5
 Pygments==2.1
 python-dateutil==2.4.2
 python-editor==0.5
