--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,19 @@ alabaster==0.7.7
 alembic==0.8.4
 aniso8601==1.1.0
 Babel==2.2.0
+blinker==1.4
 docutils==0.12
 Flask==0.10.1
 Flask-HTTPAuth==2.7.2
+Flask-Login==0.3.2
+Flask-Mail==0.9.1
 Flask-Migrate==1.7.0
+Flask-Principal==0.4.0
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
+Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 jsonschema==2.5.1
@@ -27,3 +33,4 @@ Sphinx==1.3.5
 sphinx-rtd-theme==0.1.9
 SQLAlchemy==1.0.11
 Werkzeug==0.11.3
+WTForms==2.1
