--- a/.gitignore
+++ b/.gitignore
@@ -191,10 +191,5 @@ $RECYCLE.BIN/
 .Trash-*
 
 venv/
-db_repository/
 *.db
-### Bower ###
-bioboxgui/static/libs/
-.bower-cache
-.bower-registry
-.bower-tmp
+data/
