--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,10 @@ aniso8601==1.1.0
 blinker==1.4
 itsdangerous==0.24
 jsonschema==2.5.1
+mock==2.0.0
+nose==1.3.7
 passlib==1.6.5
+pbr==1.10.0
 python-dateutil==2.5.2
 pytz==2016.3
 requests==2.9.1
