--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Principal==0.4.0
 Flask-RESTful==0.3.5
 Flask-SQLAlchemy==2.1
 Flask-Security==1.7.5
+Flask-Testing==0.4.2
 Flask-WTF==0.12
 Jinja2==2.8
 MarkupSafe==0.23
