restructure for future scalability.

--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ target/
 
 # User-specific stuff:
 # .idea/workspace.xml
-# .idea/tasks.xml
+# .idea/states.xml
 # .idea/dictionaries
 # .idea/shelf
 
